cse304_a02/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DO

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl
Rule 2     program -> empty
Rule 3     class_decl -> class_decl class_decl
Rule 4     class_decl -> CLASS ID EXTENDS ID { class_body_decl }
Rule 5     class_decl -> CLASS ID { class_body_decl }
Rule 6     class_body_decl -> class_body_decl class_body_decl
Rule 7     class_body_decl -> field_decl
Rule 8     class_body_decl -> method_decl
Rule 9     class_body_decl -> constructor_decl
Rule 10    field_decl -> modifier var_decl
Rule 11    modifier -> PRIVATE STATIC
Rule 12    modifier -> PRIVATE
Rule 13    modifier -> PUBLIC STATIC
Rule 14    modifier -> PUBLIC
Rule 15    modifier -> STATIC
Rule 16    modifier -> empty
Rule 17    var_decl -> type variables ;
Rule 18    type -> INT
Rule 19    type -> FLOAT
Rule 20    type -> BOOLEAN
Rule 21    type -> ID
Rule 22    variables -> variable
Rule 23    variables -> variable , variables
Rule 24    variable -> ID
Rule 25    method_decl -> modifier type ID ( optional_formals ) block
Rule 26    method_decl -> modifier VOID ID ( optional_formals ) block
Rule 27    constructor_decl -> modifier ID ( optional_formals ) block
Rule 28    optional_formals -> formals
Rule 29    optional_formals -> empty
Rule 30    formals -> formal_param , formals
Rule 31    formals -> formal_param
Rule 32    formal_param -> type variable
Rule 33    block -> { stmt }
Rule 34    block -> { }
Rule 35    stmt -> stmt stmt
Rule 36    stmt -> IF ( expr ) stmt ELSE stmt
Rule 37    stmt -> IF ( expr ) stmt
Rule 38    stmt -> WHILE ( expr ) stmt
Rule 39    stmt -> FOR ( optional_stmt_expr ; optional_expr ; optional_stmt_expr ) stmt
Rule 40    stmt -> RETURN optional_expr ;
Rule 41    stmt -> stmt_expr ;
Rule 42    stmt -> BREAK ;
Rule 43    stmt -> CONTINUE ;
Rule 44    stmt -> block
Rule 45    stmt -> var_decl
Rule 46    stmt -> ;
Rule 47    optional_expr -> expr
Rule 48    optional_expr -> empty
Rule 49    optional_stmt_expr -> stmt_expr
Rule 50    optional_stmt_expr -> empty
Rule 51    literal -> INT_CONST
Rule 52    literal -> FLOAT_CONST
Rule 53    literal -> STRING_CONST
Rule 54    literal -> NULL
Rule 55    literal -> TRUE
Rule 56    literal -> FALSE
Rule 57    primary -> literal
Rule 58    primary -> THIS
Rule 59    primary -> SUPER
Rule 60    primary -> ( expr )
Rule 61    primary -> NEW ID ( arguments )
Rule 62    primary -> NEW ID ( )
Rule 63    primary -> field_access
Rule 64    primary -> method_invocation
Rule 65    arguments -> expr
Rule 66    arguments -> expr , arguments
Rule 67    field_access -> primary . ID
Rule 68    field_access -> ID
Rule 69    method_invocation -> field_access ( arguments )
Rule 70    method_invocation -> field_access ( )
Rule 71    expr -> primary
Rule 72    expr -> assign
Rule 73    expr -> expr arith_op expr
Rule 74    expr -> expr bool_op expr
Rule 75    expr -> unary_op expr
Rule 76    assign -> field_access ASSIGN expr
Rule 77    assign -> field_access INCREMENT
Rule 78    assign -> INCREMENT field_access
Rule 79    assign -> field_access DECREMENT
Rule 80    assign -> DECREMENT field_access
Rule 81    stmt_expr -> assign
Rule 82    stmt_expr -> method_invocation
Rule 83    arith_op -> PLUS
Rule 84    arith_op -> MINUS
Rule 85    arith_op -> TIMES
Rule 86    arith_op -> DIVIDE
Rule 87    bool_op -> AND
Rule 88    bool_op -> OR
Rule 89    bool_op -> EQUALITY
Rule 90    bool_op -> INEQUALITY
Rule 91    bool_op -> LESSER
Rule 92    bool_op -> GREATER
Rule 93    bool_op -> LEQ
Rule 94    bool_op -> GEQ
Rule 95    unary_op -> PLUS
Rule 96    unary_op -> MINUS
Rule 97    unary_op -> NOT
Rule 98    empty -> <empty>

Terminals, with rules where they appear

(                    : 25 26 27 36 37 38 39 60 61 62 69 70
)                    : 25 26 27 36 37 38 39 60 61 62 69 70
,                    : 23 30 66
.                    : 67
;                    : 17 39 39 40 41 42 43 46
AND                  : 87
ASSIGN               : 76
BOOLEAN              : 20
BREAK                : 42
CLASS                : 4 5
CONTINUE             : 43
DECREMENT            : 79 80
DIVIDE               : 86
DO                   : 
ELSE                 : 36
EQUALITY             : 89
EXTENDS              : 4
FALSE                : 56
FLOAT                : 19
FLOAT_CONST          : 52
FOR                  : 39
GEQ                  : 94
GREATER              : 92
ID                   : 4 4 5 21 24 25 26 27 61 62 67 68
IF                   : 36 37
INCREMENT            : 77 78
INEQUALITY           : 90
INT                  : 18
INT_CONST            : 51
LEQ                  : 93
LESSER               : 91
MINUS                : 84 96
NEW                  : 61 62
NOT                  : 97
NULL                 : 54
OR                   : 88
PLUS                 : 83 95
PRIVATE              : 11 12
PUBLIC               : 13 14
RETURN               : 40
STATIC               : 11 13 15
STRING_CONST         : 53
SUPER                : 59
THIS                 : 58
TIMES                : 85
TRUE                 : 55
VOID                 : 26
WHILE                : 38
error                : 
{                    : 4 5 33 34
}                    : 4 5 33 34

Nonterminals, with rules where they appear

arguments            : 61 66 69
arith_op             : 73
assign               : 72 81
block                : 25 26 27 44
bool_op              : 74
class_body_decl      : 4 5 6 6
class_decl           : 1 3 3
constructor_decl     : 9
empty                : 2 16 29 48 50
expr                 : 36 37 38 47 60 65 66 73 73 74 74 75 76
field_access         : 63 69 70 76 77 78 79 80
field_decl           : 7
formal_param         : 30 31
formals              : 28 30
literal              : 57
method_decl          : 8
method_invocation    : 64 82
modifier             : 10 25 26 27
optional_expr        : 39 40
optional_formals     : 25 26 27
optional_stmt_expr   : 39 39
primary              : 67 71
program              : 0
stmt                 : 33 35 35 36 36 37 38 39
stmt_expr            : 41 49
type                 : 17 25 32
unary_op             : 75
var_decl             : 10 45
variable             : 22 23 32
variables            : 17 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_decl
    (2) program -> . empty
    (3) class_decl -> . class_decl class_decl
    (4) class_decl -> . CLASS ID EXTENDS ID { class_body_decl }
    (5) class_decl -> . CLASS ID { class_body_decl }
    (98) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 98 (empty -> .)

    program                        shift and go to state 1
    class_decl                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_decl .
    (3) class_decl -> class_decl . class_decl
    (3) class_decl -> . class_decl class_decl
    (4) class_decl -> . CLASS ID EXTENDS ID { class_body_decl }
    (5) class_decl -> . CLASS ID { class_body_decl }

    $end            reduce using rule 1 (program -> class_decl .)
    CLASS           shift and go to state 4

    class_decl                     shift and go to state 5

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (4) class_decl -> CLASS . ID EXTENDS ID { class_body_decl }
    (5) class_decl -> CLASS . ID { class_body_decl }

    ID              shift and go to state 6


state 5

    (3) class_decl -> class_decl class_decl .
    (3) class_decl -> class_decl . class_decl
    (3) class_decl -> . class_decl class_decl
    (4) class_decl -> . CLASS ID EXTENDS ID { class_body_decl }
    (5) class_decl -> . CLASS ID { class_body_decl }

  ! shift/reduce conflict for CLASS resolved as shift
    $end            reduce using rule 3 (class_decl -> class_decl class_decl .)
    CLASS           shift and go to state 4

  ! CLASS           [ reduce using rule 3 (class_decl -> class_decl class_decl .) ]

    class_decl                     shift and go to state 5

state 6

    (4) class_decl -> CLASS ID . EXTENDS ID { class_body_decl }
    (5) class_decl -> CLASS ID . { class_body_decl }

    EXTENDS         shift and go to state 7
    {               shift and go to state 8


state 7

    (4) class_decl -> CLASS ID EXTENDS . ID { class_body_decl }

    ID              shift and go to state 9


state 8

    (5) class_decl -> CLASS ID { . class_body_decl }
    (6) class_body_decl -> . class_body_decl class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID ( optional_formals ) block
    (26) method_decl -> . modifier VOID ID ( optional_formals ) block
    (27) constructor_decl -> . modifier ID ( optional_formals ) block
    (11) modifier -> . PRIVATE STATIC
    (12) modifier -> . PRIVATE
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . STATIC
    (16) modifier -> . empty
    (98) empty -> .

    PRIVATE         shift and go to state 15
    PUBLIC          shift and go to state 17
    STATIC          shift and go to state 16
    VOID            reduce using rule 98 (empty -> .)
    ID              reduce using rule 98 (empty -> .)
    INT             reduce using rule 98 (empty -> .)
    FLOAT           reduce using rule 98 (empty -> .)
    BOOLEAN         reduce using rule 98 (empty -> .)

    class_body_decl                shift and go to state 10
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    modifier                       shift and go to state 14
    empty                          shift and go to state 18

state 9

    (4) class_decl -> CLASS ID EXTENDS ID . { class_body_decl }

    {               shift and go to state 19


state 10

    (5) class_decl -> CLASS ID { class_body_decl . }
    (6) class_body_decl -> class_body_decl . class_body_decl
    (6) class_body_decl -> . class_body_decl class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID ( optional_formals ) block
    (26) method_decl -> . modifier VOID ID ( optional_formals ) block
    (27) constructor_decl -> . modifier ID ( optional_formals ) block
    (11) modifier -> . PRIVATE STATIC
    (12) modifier -> . PRIVATE
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . STATIC
    (16) modifier -> . empty
    (98) empty -> .

    }               shift and go to state 21
    PRIVATE         shift and go to state 15
    PUBLIC          shift and go to state 17
    STATIC          shift and go to state 16
    VOID            reduce using rule 98 (empty -> .)
    ID              reduce using rule 98 (empty -> .)
    INT             reduce using rule 98 (empty -> .)
    FLOAT           reduce using rule 98 (empty -> .)
    BOOLEAN         reduce using rule 98 (empty -> .)

    class_body_decl                shift and go to state 20
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    modifier                       shift and go to state 14
    empty                          shift and go to state 18

state 11

    (7) class_body_decl -> field_decl .

    }               reduce using rule 7 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 7 (class_body_decl -> field_decl .)
    PUBLIC          reduce using rule 7 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 7 (class_body_decl -> field_decl .)
    VOID            reduce using rule 7 (class_body_decl -> field_decl .)
    ID              reduce using rule 7 (class_body_decl -> field_decl .)
    INT             reduce using rule 7 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 7 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 7 (class_body_decl -> field_decl .)


state 12

    (8) class_body_decl -> method_decl .

    }               reduce using rule 8 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 8 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 8 (class_body_decl -> method_decl .)
    VOID            reduce using rule 8 (class_body_decl -> method_decl .)
    ID              reduce using rule 8 (class_body_decl -> method_decl .)
    INT             reduce using rule 8 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 8 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl -> method_decl .)


state 13

    (9) class_body_decl -> constructor_decl .

    }               reduce using rule 9 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 9 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 9 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 9 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 9 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl -> constructor_decl .)


state 14

    (10) field_decl -> modifier . var_decl
    (25) method_decl -> modifier . type ID ( optional_formals ) block
    (26) method_decl -> modifier . VOID ID ( optional_formals ) block
    (27) constructor_decl -> modifier . ID ( optional_formals ) block
    (17) var_decl -> . type variables ;
    (18) type -> . INT
    (19) type -> . FLOAT
    (20) type -> . BOOLEAN
    (21) type -> . ID

    VOID            shift and go to state 25
    ID              shift and go to state 24
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    BOOLEAN         shift and go to state 28

    var_decl                       shift and go to state 22
    type                           shift and go to state 23

state 15

    (11) modifier -> PRIVATE . STATIC
    (12) modifier -> PRIVATE .

    STATIC          shift and go to state 29
    VOID            reduce using rule 12 (modifier -> PRIVATE .)
    ID              reduce using rule 12 (modifier -> PRIVATE .)
    INT             reduce using rule 12 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 12 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 12 (modifier -> PRIVATE .)


state 16

    (15) modifier -> STATIC .

    VOID            reduce using rule 15 (modifier -> STATIC .)
    ID              reduce using rule 15 (modifier -> STATIC .)
    INT             reduce using rule 15 (modifier -> STATIC .)
    FLOAT           reduce using rule 15 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 15 (modifier -> STATIC .)


state 17

    (13) modifier -> PUBLIC . STATIC
    (14) modifier -> PUBLIC .

    STATIC          shift and go to state 30
    VOID            reduce using rule 14 (modifier -> PUBLIC .)
    ID              reduce using rule 14 (modifier -> PUBLIC .)
    INT             reduce using rule 14 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 14 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 14 (modifier -> PUBLIC .)


state 18

    (16) modifier -> empty .

    VOID            reduce using rule 16 (modifier -> empty .)
    ID              reduce using rule 16 (modifier -> empty .)
    INT             reduce using rule 16 (modifier -> empty .)
    FLOAT           reduce using rule 16 (modifier -> empty .)
    BOOLEAN         reduce using rule 16 (modifier -> empty .)


state 19

    (4) class_decl -> CLASS ID EXTENDS ID { . class_body_decl }
    (6) class_body_decl -> . class_body_decl class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID ( optional_formals ) block
    (26) method_decl -> . modifier VOID ID ( optional_formals ) block
    (27) constructor_decl -> . modifier ID ( optional_formals ) block
    (11) modifier -> . PRIVATE STATIC
    (12) modifier -> . PRIVATE
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . STATIC
    (16) modifier -> . empty
    (98) empty -> .

    PRIVATE         shift and go to state 15
    PUBLIC          shift and go to state 17
    STATIC          shift and go to state 16
    VOID            reduce using rule 98 (empty -> .)
    ID              reduce using rule 98 (empty -> .)
    INT             reduce using rule 98 (empty -> .)
    FLOAT           reduce using rule 98 (empty -> .)
    BOOLEAN         reduce using rule 98 (empty -> .)

    class_body_decl                shift and go to state 31
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    modifier                       shift and go to state 14
    empty                          shift and go to state 18

state 20

    (6) class_body_decl -> class_body_decl class_body_decl .
    (6) class_body_decl -> class_body_decl . class_body_decl
    (6) class_body_decl -> . class_body_decl class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID ( optional_formals ) block
    (26) method_decl -> . modifier VOID ID ( optional_formals ) block
    (27) constructor_decl -> . modifier ID ( optional_formals ) block
    (11) modifier -> . PRIVATE STATIC
    (12) modifier -> . PRIVATE
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . STATIC
    (16) modifier -> . empty
    (98) empty -> .

  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for STATIC resolved as shift
  ! reduce/reduce conflict for VOID resolved using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
  ! reduce/reduce conflict for ID resolved using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
  ! reduce/reduce conflict for INT resolved using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
  ! reduce/reduce conflict for FLOAT resolved using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
    }               reduce using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
    VOID            reduce using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
    ID              reduce using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
    INT             reduce using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
    FLOAT           reduce using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
    BOOLEAN         reduce using rule 6 (class_body_decl -> class_body_decl class_body_decl .)
    PRIVATE         shift and go to state 15
    PUBLIC          shift and go to state 17
    STATIC          shift and go to state 16

  ! PRIVATE         [ reduce using rule 6 (class_body_decl -> class_body_decl class_body_decl .) ]
  ! PUBLIC          [ reduce using rule 6 (class_body_decl -> class_body_decl class_body_decl .) ]
  ! STATIC          [ reduce using rule 6 (class_body_decl -> class_body_decl class_body_decl .) ]
  ! VOID            [ reduce using rule 98 (empty -> .) ]
  ! ID              [ reduce using rule 98 (empty -> .) ]
  ! INT             [ reduce using rule 98 (empty -> .) ]
  ! FLOAT           [ reduce using rule 98 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 98 (empty -> .) ]

    class_body_decl                shift and go to state 20
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    modifier                       shift and go to state 14
    empty                          shift and go to state 18

state 21

    (5) class_decl -> CLASS ID { class_body_decl } .

    CLASS           reduce using rule 5 (class_decl -> CLASS ID { class_body_decl } .)
    $end            reduce using rule 5 (class_decl -> CLASS ID { class_body_decl } .)


state 22

    (10) field_decl -> modifier var_decl .

    }               reduce using rule 10 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 10 (field_decl -> modifier var_decl .)
    PUBLIC          reduce using rule 10 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 10 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 10 (field_decl -> modifier var_decl .)
    ID              reduce using rule 10 (field_decl -> modifier var_decl .)
    INT             reduce using rule 10 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 10 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 10 (field_decl -> modifier var_decl .)


state 23

    (25) method_decl -> modifier type . ID ( optional_formals ) block
    (17) var_decl -> type . variables ;
    (22) variables -> . variable
    (23) variables -> . variable , variables
    (24) variable -> . ID

    ID              shift and go to state 32

    variables                      shift and go to state 33
    variable                       shift and go to state 34

state 24

    (27) constructor_decl -> modifier ID . ( optional_formals ) block
    (21) type -> ID .

    (               shift and go to state 35
    ID              reduce using rule 21 (type -> ID .)


state 25

    (26) method_decl -> modifier VOID . ID ( optional_formals ) block

    ID              shift and go to state 36


state 26

    (18) type -> INT .

    ID              reduce using rule 18 (type -> INT .)


state 27

    (19) type -> FLOAT .

    ID              reduce using rule 19 (type -> FLOAT .)


state 28

    (20) type -> BOOLEAN .

    ID              reduce using rule 20 (type -> BOOLEAN .)


state 29

    (11) modifier -> PRIVATE STATIC .

    VOID            reduce using rule 11 (modifier -> PRIVATE STATIC .)
    ID              reduce using rule 11 (modifier -> PRIVATE STATIC .)
    INT             reduce using rule 11 (modifier -> PRIVATE STATIC .)
    FLOAT           reduce using rule 11 (modifier -> PRIVATE STATIC .)
    BOOLEAN         reduce using rule 11 (modifier -> PRIVATE STATIC .)


state 30

    (13) modifier -> PUBLIC STATIC .

    VOID            reduce using rule 13 (modifier -> PUBLIC STATIC .)
    ID              reduce using rule 13 (modifier -> PUBLIC STATIC .)
    INT             reduce using rule 13 (modifier -> PUBLIC STATIC .)
    FLOAT           reduce using rule 13 (modifier -> PUBLIC STATIC .)
    BOOLEAN         reduce using rule 13 (modifier -> PUBLIC STATIC .)


state 31

    (4) class_decl -> CLASS ID EXTENDS ID { class_body_decl . }
    (6) class_body_decl -> class_body_decl . class_body_decl
    (6) class_body_decl -> . class_body_decl class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID ( optional_formals ) block
    (26) method_decl -> . modifier VOID ID ( optional_formals ) block
    (27) constructor_decl -> . modifier ID ( optional_formals ) block
    (11) modifier -> . PRIVATE STATIC
    (12) modifier -> . PRIVATE
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PUBLIC
    (15) modifier -> . STATIC
    (16) modifier -> . empty
    (98) empty -> .

    }               shift and go to state 37
    PRIVATE         shift and go to state 15
    PUBLIC          shift and go to state 17
    STATIC          shift and go to state 16
    VOID            reduce using rule 98 (empty -> .)
    ID              reduce using rule 98 (empty -> .)
    INT             reduce using rule 98 (empty -> .)
    FLOAT           reduce using rule 98 (empty -> .)
    BOOLEAN         reduce using rule 98 (empty -> .)

    class_body_decl                shift and go to state 20
    field_decl                     shift and go to state 11
    method_decl                    shift and go to state 12
    constructor_decl               shift and go to state 13
    modifier                       shift and go to state 14
    empty                          shift and go to state 18

state 32

    (25) method_decl -> modifier type ID . ( optional_formals ) block
    (24) variable -> ID .

    (               shift and go to state 38
    ,               reduce using rule 24 (variable -> ID .)
    ;               reduce using rule 24 (variable -> ID .)


state 33

    (17) var_decl -> type variables . ;

    ;               shift and go to state 39


state 34

    (22) variables -> variable .
    (23) variables -> variable . , variables

    ;               reduce using rule 22 (variables -> variable .)
    ,               shift and go to state 40


state 35

    (27) constructor_decl -> modifier ID ( . optional_formals ) block
    (28) optional_formals -> . formals
    (29) optional_formals -> . empty
    (30) formals -> . formal_param , formals
    (31) formals -> . formal_param
    (98) empty -> .
    (32) formal_param -> . type variable
    (18) type -> . INT
    (19) type -> . FLOAT
    (20) type -> . BOOLEAN
    (21) type -> . ID

    )               reduce using rule 98 (empty -> .)
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    BOOLEAN         shift and go to state 28
    ID              shift and go to state 41

    optional_formals               shift and go to state 42
    formals                        shift and go to state 43
    empty                          shift and go to state 44
    formal_param                   shift and go to state 45
    type                           shift and go to state 46

state 36

    (26) method_decl -> modifier VOID ID . ( optional_formals ) block

    (               shift and go to state 47


state 37

    (4) class_decl -> CLASS ID EXTENDS ID { class_body_decl } .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID EXTENDS ID { class_body_decl } .)
    $end            reduce using rule 4 (class_decl -> CLASS ID EXTENDS ID { class_body_decl } .)


state 38

    (25) method_decl -> modifier type ID ( . optional_formals ) block
    (28) optional_formals -> . formals
    (29) optional_formals -> . empty
    (30) formals -> . formal_param , formals
    (31) formals -> . formal_param
    (98) empty -> .
    (32) formal_param -> . type variable
    (18) type -> . INT
    (19) type -> . FLOAT
    (20) type -> . BOOLEAN
    (21) type -> . ID

    )               reduce using rule 98 (empty -> .)
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    BOOLEAN         shift and go to state 28
    ID              shift and go to state 41

    type                           shift and go to state 46
    optional_formals               shift and go to state 48
    formals                        shift and go to state 43
    empty                          shift and go to state 44
    formal_param                   shift and go to state 45

state 39

    (17) var_decl -> type variables ; .

    }               reduce using rule 17 (var_decl -> type variables ; .)
    PRIVATE         reduce using rule 17 (var_decl -> type variables ; .)
    PUBLIC          reduce using rule 17 (var_decl -> type variables ; .)
    STATIC          reduce using rule 17 (var_decl -> type variables ; .)
    VOID            reduce using rule 17 (var_decl -> type variables ; .)
    ID              reduce using rule 17 (var_decl -> type variables ; .)
    INT             reduce using rule 17 (var_decl -> type variables ; .)
    FLOAT           reduce using rule 17 (var_decl -> type variables ; .)
    BOOLEAN         reduce using rule 17 (var_decl -> type variables ; .)
    IF              reduce using rule 17 (var_decl -> type variables ; .)
    WHILE           reduce using rule 17 (var_decl -> type variables ; .)
    FOR             reduce using rule 17 (var_decl -> type variables ; .)
    RETURN          reduce using rule 17 (var_decl -> type variables ; .)
    BREAK           reduce using rule 17 (var_decl -> type variables ; .)
    CONTINUE        reduce using rule 17 (var_decl -> type variables ; .)
    ;               reduce using rule 17 (var_decl -> type variables ; .)
    {               reduce using rule 17 (var_decl -> type variables ; .)
    INCREMENT       reduce using rule 17 (var_decl -> type variables ; .)
    DECREMENT       reduce using rule 17 (var_decl -> type variables ; .)
    THIS            reduce using rule 17 (var_decl -> type variables ; .)
    SUPER           reduce using rule 17 (var_decl -> type variables ; .)
    (               reduce using rule 17 (var_decl -> type variables ; .)
    NEW             reduce using rule 17 (var_decl -> type variables ; .)
    INT_CONST       reduce using rule 17 (var_decl -> type variables ; .)
    FLOAT_CONST     reduce using rule 17 (var_decl -> type variables ; .)
    STRING_CONST    reduce using rule 17 (var_decl -> type variables ; .)
    NULL            reduce using rule 17 (var_decl -> type variables ; .)
    TRUE            reduce using rule 17 (var_decl -> type variables ; .)
    FALSE           reduce using rule 17 (var_decl -> type variables ; .)
    ELSE            reduce using rule 17 (var_decl -> type variables ; .)


state 40

    (23) variables -> variable , . variables
    (22) variables -> . variable
    (23) variables -> . variable , variables
    (24) variable -> . ID

    ID              shift and go to state 50

    variable                       shift and go to state 34
    variables                      shift and go to state 49

state 41

    (21) type -> ID .

    ID              reduce using rule 21 (type -> ID .)


state 42

    (27) constructor_decl -> modifier ID ( optional_formals . ) block

    )               shift and go to state 51


state 43

    (28) optional_formals -> formals .

    )               reduce using rule 28 (optional_formals -> formals .)


state 44

    (29) optional_formals -> empty .

    )               reduce using rule 29 (optional_formals -> empty .)


state 45

    (30) formals -> formal_param . , formals
    (31) formals -> formal_param .

    ,               shift and go to state 52
    )               reduce using rule 31 (formals -> formal_param .)


state 46

    (32) formal_param -> type . variable
    (24) variable -> . ID

    ID              shift and go to state 50

    variable                       shift and go to state 53

state 47

    (26) method_decl -> modifier VOID ID ( . optional_formals ) block
    (28) optional_formals -> . formals
    (29) optional_formals -> . empty
    (30) formals -> . formal_param , formals
    (31) formals -> . formal_param
    (98) empty -> .
    (32) formal_param -> . type variable
    (18) type -> . INT
    (19) type -> . FLOAT
    (20) type -> . BOOLEAN
    (21) type -> . ID
